--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "meet-me",
   "version": "0.1.0",
-  "private": true,
+  "private": true,  
+  "engines": {
+    "node": "12.13.0"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
